--- a/json-ajax/builds/development/index.html
+++ b/json-ajax/builds/development/index.html
@@ -13,6 +13,7 @@
   <div id="speakers">
   </div>
   <div id="socialmedia"></div>
+  <div id="flickr"></div>
 
 <script id="speakerstpl" type="text/template">
 {{#speakers}}
@@ -34,6 +35,7 @@
 
 <script src="http://cdn.jsdelivr.net/mustache.js/2.1.0/mustache.min.js" type="text/javascript"></script>
 <script src="js/script.js"></script>
+<script src="http://api.flickr.com/services/feeds/photos_public.gne?id=73845487@N00&format=json&tags=portfolio"></script>
 </body>
 
 </html>
