--- a/json-ajax/builds/development/search.html
+++ b/json-ajax/builds/development/search.html
@@ -15,6 +15,8 @@
             padding: 30px;
             display: flex;
             justify-content: center;
+            background-color: grey;
+        
         }
 
         main {
