more firebase practice

--- a/json-ajax/builds/development/firebase.html
+++ b/json-ajax/builds/development/firebase.html
@@ -22,7 +22,7 @@ ref.on('value', function(snapshot) {
 });
 
 newNode.addEventListener('click', function() {
-  ref.set({
+  ref.push({
     name: "Richard Tweed",
     reknown: "Vietname Vet, Award Winning Architect",
     shortname: "Richard_Tweed",
