more practice with firebase

--- a/json-ajax/builds/development/newfirebase.html
+++ b/json-ajax/builds/development/newfirebase.html
@@ -11,11 +11,10 @@
 
   <div id="formDiv">
 	  <form id="artistForm">
-	  	<input type="text" id="nameid" name="nameid" placeholder="name">
+	  	<input type="text" id="nameid" name="nameid" placeholder="name" value="">
 	  	<input type="text" id="reknownid" name="reknownid" placeholder="reknown">
 	  	<input type="text" id="shortnameid" name="shortnameid" placeholder="shortname">
 	  	<input type="text" id="bioid" name="bioid" placeholder="bio">
-	  	<input type ="submit" id="submit" name="submit">
 	  </form>
   </div>
 
