fixed video time

--- a/zenoexe/4-js/3-video/index.html
+++ b/zenoexe/4-js/3-video/index.html
@@ -17,6 +17,7 @@
 		<button class="volumeUp">Up</button>
 		<button class="volumeDown">Down</button>
 		<button class="replay">Replay</button>
+		<p class="time"></p>
 
 	</div>
 	<script src="script.js"></script>
