--- a/zenoexe/4-js/8-dragndrop/index.html
+++ b/zenoexe/4-js/8-dragndrop/index.html
@@ -21,11 +21,13 @@
 </head>
 <body>
 	<div class="box">
-		<img src="img/clubs.png" alt="clubs" id="clubs">
-		<img src="img/hearts.png" alt="hearts" id="hearts">
-		<img src="img/spades.png" alt="spades" id="spades">
-		<img src="img/diamonds.png" alt="diamonds" id="diamonds">
+		<img src="img/clubs.png" alt="clubs" id="clubs" draggable="true">
+		<img src="img/hearts.png" alt="hearts" id="hearts" draggable="true">
+		<img src="img/spades.png" alt="spades" id="spades" draggable="true">
+		<img src="img/diamonds.png" alt="diamonds" id="diamonds" draggable="true">
 	</div>
 	<div class="box"></div>
+
+	<script src="script.js"></script>
 </body>
 </html>
