custom element and template working

--- a/zenoexe/5-web-components /1-custom-elements/2-fcc-location.html
+++ b/zenoexe/5-web-components /1-custom-elements/2-fcc-location.html
@@ -10,7 +10,7 @@
 
 <script>
 	
-	var element = Object.creat(HTMLElement.prototype);
+	var element = Object.create(HTMLElement.prototype);
 
 	element.attachedCallback = fuction(){
 		var latitude = this.getAttribute('latitude');
