--- a/zenoexe/5-web-components /3-shadow-dom/1-index.html
+++ b/zenoexe/5-web-components /3-shadow-dom/1-index.html
@@ -11,5 +11,14 @@
 <body>
 	<h1>Foo</h1>
 	<div id="bar"></div>
+
+	<script>
+	var bar = document.querySelector('#bar');
+	var shadowRoot = bar.createShadowRoot();
+
+	shadowRoot.innerHTML = '<style> h1 {color: red} </style>' +
+								'<h1>qwe</h1>';
+
+	</script>
 </body>
 </html>
