--- a/zenoexe/5-web-components /4-html-imports/2-index.html
+++ b/zenoexe/5-web-components /4-html-imports/2-index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="import" href="1-component.html">
 </head>
 <body>
 	<h1>FAQ</h1>
-
+<!--
 	<p><a href="#one">What is the TEAS exam?</a></p>
 	<p><a href="#two">How much will the TEAS exam cost me?</a></p>
 	<p><a href="#three">What if I forgot my password?</a></p>
@@ -14,7 +15,9 @@
 	<p><a href="#six">What do I need to start my own Child Development Center?</a></p>
 	<p><a href="#seven">How do I get started at Fresno City College?</a></p>
 	<p><a href="#eight">What is the cancellation policy?</a></p>
-	<p><a href="#nine">How do I register for a FCC Training Institute program?</a></p>
+	<p><a href="#nine">How do I register for a FCC Training Institute program?</a></p> -->
+
+	<content-element></content-element>
 
     <h2 id="one">What is the TEAS exam?</h2>
 
