--- a/zenoexe/7-polymer/2-lifecycle/1-polymer.html
+++ b/zenoexe/7-polymer/2-lifecycle/1-polymer.html
@@ -9,7 +9,7 @@
 	<my-element></my-element>
 <script>
 Polymer({
-	is: 'my-element'
+	is: 'my-element',
 
 	attached: function(){
 		console.log('attached');
