--- a/zenoexe/7-polymer/2-lifecycle/blink.html
+++ b/zenoexe/7-polymer/2-lifecycle/blink.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<blink-element>asdasd</blink-element>
+	<blink-element interval="100">asdasd</blink-element>
 </body>
 </html>
 
@@ -14,9 +14,15 @@
 	
 	element.attachedCallback = function(){
 		var self = this;
+		var interval = self.getAttribute('interval');
+		
+		if(!interval){
+			interval = 200;
+		};
+		
 		setInterval(function(){
 			self.style.visibility = self.style.visibility === 'hidden' ? 'visible' : 'hidden';
-		}, 200);
+		}, interval);
 	};
 
 	element.detachedCallback = function(){
